FSAL_GLUSTER: Use the APIs to register for upcall events' callback
There are new APIs being provided by libgfapi to register
and unregister for various upcall event along with callbacks
functions to be invoked  - https://review.gluster.org/18349

So instead of polling continuously in a loop hogging CPU,
use these new APIs to register callback functions for cache
invalidation. These callback functions shall be invoked
only in the event of any upcall received and that too in the
backend fs thread context (which seem to be safe as per the current
upcall design).

Change-Id: I46b103d3b8555116efe5852eab99de30a5fd0e43
Signed-off-by: Soumya Koduri <skoduri@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -587,6 +587,13 @@ if(USE_FSAL_GLUSTER)
 	set(USE_FSAL_GLUSTER OFF)
 	message(STATUS "lkowner support is needed to enable GLUSTER build")
     endif(HAVE_LKOWNER)
+    check_library_exists(gfapi glfs_upcall_register ${GFAPI_LIBDIR} HAVE_REGISTER_UPCALL)
+    if(HAVE_REGISTER_UPCALL)
+        set(USE_GLUSTER_UPCALL_REGISTER ON)
+    else()
+        set(USE_GLUSTER_UPCALL_REGISTER OFF)
+        message(STATUS "Could not find glfs_upcall_register, switching to glfs_h_poll_upcall")
+    endif(HAVE_REGISTER_UPCALL)
   endif(USE_FSAL_GLUSTER)
 endif(USE_FSAL_GLUSTER)
 
