WIP/FSAL_GLUSTER: Use upcall register APIs
There are new APIs being provided by libgfapi to register
and unregister for callbacks - https://review.gluster.org/18349

So instead of polling continuously in a loop hoggin CPU,
use these new APIs to register callback functions for cache
invalidation. These callback functions shall be invoked
only in the event of any upcall received and that too in the
backend fs thread context (which seem to be safe as per the current
upcall design).

Change-Id: I46b103d3b8555116efe5852eab99de30a5fd0e43
Signed-off-by: Soumya Koduri <skoduri@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -579,6 +579,13 @@ if(USE_FSAL_GLUSTER)
         set(USE_GLUSTER_XREADDIRPLUS OFF)
         message(STATUS "Could not find glfs_xreaddirplus, switching to glfs_readdir_r")
     endif(HAVE_XREADDIRPLUS)
+    check_library_exists(gfapi glfs_register_upcall ${GFAPI_LIBDIR} HAVE_REGISTER_UPCALL)
+    if(HAVE_REGISTER_UPCALL)
+        set(USE_GLUSTER_REGISTER_UPCALL ON)
+    else()
+        set(USE_GLUSTER_REGISTER_UPCALL OFF)
+        message(STATUS "Could not find glfs_register_upcall, switching to glfs_h_poll_upcall")
+    endif(HAVE_REGISTER_UPCALL)
   endif(USE_FSAL_GLUSTER)
 endif(USE_FSAL_GLUSTER)
 
