FSAL_GLUSTER: Use the new API to be able to set lkowner
With support_ex, its mandatory for each FSAL to support
lk_owners. Hence a new API was introduced in libgfapi
to be able to set lk_owner -

https://review.gluster.org/#/q/I67591d6b9a89c20b9617d52616513ff9e6c06b47

With this change now FSAL_GLUSTER can be compiled only
against below glusterfs-versions -

>=3.12.3
>=3.10.7

(glusterfs-api >= 7.3.10.7)

Change-Id: If8fb44c0a6e5f07372d44939befc696ed8718c21
Signed-off-by: Soumya Koduri <skoduri@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -536,7 +536,7 @@ if(USE_FSAL_GLUSTER)
   IF(GLUSTER_PREFIX)
     set(ENV{PKG_CONFIG_PATH} "${PKG_CONFIG_PATH}:${GLUSTER_PREFIX}/lib/pkgconfig")
   ENDIF(GLUSTER_PREFIX)
-  pkg_check_modules(GFAPI glusterfs-api>=7.3.8.6)
+  pkg_check_modules(GFAPI glusterfs-api>=7.3.10.7)
   if(NOT GFAPI_FOUND)
     if(STRICT_PACKAGE)
       message(FATAL_ERROR "STRICT PACKAGE: Cannot find GLUSTER GFAPI runtime. Disabling GLUSTER fsal build")
@@ -579,6 +579,14 @@ if(USE_FSAL_GLUSTER)
         set(USE_GLUSTER_XREADDIRPLUS OFF)
         message(STATUS "Could not find glfs_xreaddirplus, switching to glfs_readdir_r")
     endif(HAVE_XREADDIRPLUS)
+    check_library_exists(gfapi glfs_fd_set_lkowner ${GFAPI_LIBDIR} HAVE_LKOWNER)
+    if(HAVE_LKOWNER)
+	set(USE_LKOWNER ON)
+    else()
+	set(USE_LKOWNER OFF)
+	set(USE_FSAL_GLUSTER OFF)
+	message(STATUS "lkowner support is needed to enable GLUSTER build")
+    endif(HAVE_LKOWNER)
   endif(USE_FSAL_GLUSTER)
 endif(USE_FSAL_GLUSTER)
 
