--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -82,7 +82,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
      message( STATUS "Detected a Linux openSUSE machine" )
      set(DISTRO "SLES")
      set(LIBEXECDIR "/usr/lib")
-  elseif( ${SYS_RELEASE} MATCHES "Debian GNU/Linux" OR ${SYS_RELEASE} MATCHES "Ubuntu")
+  elseif( (${SYS_RELEASE} MATCHES "Debian GNU/Linux") OR (${SYS_RELEASE} MATCHES "Ubuntu") )
      message( STATUS "Detected a Linux Debian base machine" )
      set(DISTRO "DEBIAN")
      set(LIBEXECDIR "/usr/lib")
