test-lookup-latency - FSAL lookup latency microbenchmark
This adds a new g-test unit test that runs lookup of several types on
several setups in large loops to determine average latency of the calls.
It is useful for microbenchmarking latency of lookup, and is the first
in a suite of such tests for various operations.

Change-Id: Iaad6ad2044c97ef301eb08aa5a5802ca17f31413
Signed-off-by: Daniel Gryniewicz <dang@redhat.com>

--- a/src/gtest/CMakeLists.txt
+++ b/src/gtest/CMakeLists.txt
@@ -4,6 +4,21 @@ set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=gnu++14 -Wnon-virtual-dtor -Wno-inval
 set(UNITTEST_LIBS ${GTEST_MAIN} ${GTEST} boost_program_options boost_system ${PTHREAD_LIBS})
 set(UNITTEST_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${GTEST_PREFIX}/include -fno-strict-aliasing")
 
+set(GTEST_LIBRARIES
+  MainServices
+  ${PROTOCOLS}
+  ${GANESHA_CORE}
+  fsalpseudo
+  FsalCore
+  fsalpseudo
+  FsalCore
+  config_parsing
+  ${LIBTIRPC_LIBRARIES}
+  ${SYSTEM_LIBRARIES}
+  ${UNITTEST_LIBS}
+  ${LTTNG_LIBRARIES}
+  )
+
 # generic test
 set(test_example_SRCS
   test_example.cc
@@ -26,25 +41,26 @@ set(test_ci_hash_dist1_SRCS
   test_ci_hash_dist1.cc
   )
 
-message( STATUS "fsal_CORE_SRCS: ${fsal_CORE_SRCS}" )
-
 add_executable(test_ci_hash_dist1
   ${test_ci_hash_dist1_SRCS})
 add_sanitizers(test_ci_hash_dist1)
 
 target_link_libraries(test_ci_hash_dist1
-  MainServices
-  ${PROTOCOLS}
-  ${GANESHA_CORE}
-  fsalpseudo
-  FsalCore
-  fsalpseudo
-  FsalCore
-  config_parsing
-  ${LIBTIRPC_LIBRARIES}
-  ${SYSTEM_LIBRARIES}
-  ${UNITTEST_LIBS}
-  ${LTTNG_LIBRARIES}
+  ${GTEST_LIBRARIES}
   )
 set_target_properties(test_ci_hash_dist1 PROPERTIES COMPILE_FLAGS
+  "${UNITTEST_CXX_FLAGS}")
+
+set(test_lookup_latency_SRCS
+  test_lookup_latency.cc
+  )
+
+add_executable(test_lookup_latency
+  ${test_lookup_latency_SRCS})
+add_sanitizers(test_lookup_latency)
+
+target_link_libraries(test_lookup_latency
+  ${GTEST_LIBRARIES}
+  )
+set_target_properties(test_lookup_latency PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
