recovery_rados_ng: add new driver for recovery
Add a new recovery backend driver that is "safe by default".

We always load the client database from the on-disk store. As new
clients come in and leave during the grace period, we add and remove
them from a single shared "grace_op" transaction.

Once the grace period is lifted, we commit that transaction and
further updates to the kv store are done synchronously.

This method makes it OK for ganesha to crash during the grace period.
Changes to the backing store are done in memory until the grace period
is lifted.

Change-Id: Ibc36f626df0b9e423b225726e2ada364c2eaed00
Signed-off-by: Jeff Layton <jlayton@redhat.com>

--- a/src/SAL/CMakeLists.txt
+++ b/src/SAL/CMakeLists.txt
@@ -37,6 +37,7 @@ if(USE_RADOS_RECOV)
   set(sal_STAT_SRCS
     ${sal_STAT_SRCS}
     recovery/recovery_rados_kv.c
+    recovery/recovery_rados_ng.c
     )
 endif(USE_RADOS_RECOV)
 
