cmake: detect openSUSE Tumbleweed
Tumbleweed is SUSE's rolling release distribution

Change-Id: Id7868135f67945dd6cdff8ecb028042fef5789cc
Signed-off-by: Kaleb S. KEITHLEY <kkeithle@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -79,7 +79,11 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
      set(DISTRO "SLES")
      set(LIBEXECDIR "/usr/lib")
   elseif( ${SYS_RELEASE} MATCHES "openSUSE Leap" )
-     message( STATUS "Detected a Linux openSUSE machine" )
+     message( STATUS "Detected a Linux openSUSE Leap machine" )
+     set(DISTRO "SLES")
+     set(LIBEXECDIR "/usr/lib")
+  elseif( ${SYS_RELEASE} MATCHES "openSUSE Tumbleweed" )
+     message( STATUS "Detected a Linux openSUSE Tumbleweed machine" )
      set(DISTRO "SLES")
      set(LIBEXECDIR "/usr/lib")
   elseif( (${SYS_RELEASE} MATCHES "Debian GNU/Linux") OR (${SYS_RELEASE} MATCHES "Ubuntu") )
