Create the LUSTRE FSAL over VFS FSAL
This initial Lustre FSAL code is as nearest as possible from the
VFS FSAL code.

It only adds an HSM check to trigger an hsm restore and return
ERR_FSAL_DELAY when a file is released. An option of export is
added to set/unset this behaviour : async_hsm_restore. For
example, 9P clients don't support retry.

If we don't have an up to date lustre api, we still compile a
"fake" LUSTRE FSAL to continue to check the compilation path.

Change-Id: Ibe495fd0467ab6b86c1eb369099a78fc048d55a0
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/FSAL/FSAL_VFS/CMakeLists.txt
+++ b/src/FSAL/FSAL_VFS/CMakeLists.txt
@@ -3,10 +3,13 @@ add_definitions(
   -D_GNU_SOURCE
 )
 
-set( LIB_PREFIX 64)
+set(LIB_PREFIX 64)
 
 add_subdirectory(os)
-add_subdirectory(vfs)
+
+if(USE_FSAL_VFS OR USE_FSAL_LUSTRE)
+    add_subdirectory(vfs)
+endif(USE_FSAL_VFS OR USE_FSAL_LUSTRE)
 
 if(USE_FSAL_XFS)
     add_subdirectory(xfs)
