Create the LUSTRE FSAL over VFS FSAL
This initial Lustre FSAL code is as nearest as possible from the
VFS FSAL code.

It only adds a HSM (Hierchical Storage Manager with several
storage levels) check to trigger a restore and return
ERR_FSAL_DELAY at open when a file is released.

An option of export is added to set/unset this behaviour :
async_hsm_restore. For example, 9P clients don't support retry.

If we don't have an up to date lustre api, we still compile a
"dummy" LUSTRE FSAL to continue to check the compilation path.

Change-Id: Ibe495fd0467ab6b86c1eb369099a78fc048d55a0
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/FSAL/FSAL_VFS/vfs/CMakeLists.txt
+++ b/src/FSAL/FSAL_VFS/vfs/CMakeLists.txt
@@ -3,8 +3,7 @@ add_definitions(
   -D_GNU_SOURCE
 )
 
-SET(fsalvfs_LIB_SRCS
-   main.c
+SET(fsalvfs_LIB_SRCS_common
    ../export.c
    ../handle.c
    ../handle_syscalls.c
@@ -13,20 +12,94 @@ SET(fsalvfs_LIB_SRCS
    ../vfs_methods.h
    ../state.c
    subfsal_vfs.c
-  )
-
-if(ENABLE_VFS_DEBUG_ACL)
-  set(fsalvfs_LIB_SRCS ${fsalvfs_LIB_SRCS} attrs.c)
-endif(ENABLE_VFS_DEBUG_ACL)
-
-add_library(fsalvfs MODULE ${fsalvfs_LIB_SRCS})
-add_sanitizers(fsalvfs)
-
-target_link_libraries(fsalvfs
-  gos
-  fsal_os
-  ${SYSTEM_LIBRARIES}
 )
 
-set_target_properties(fsalvfs PROPERTIES VERSION 4.2.0 SOVERSION 4)
-install(TARGETS fsalvfs COMPONENT fsal DESTINATION ${FSAL_DESTINATION} )
+if(ENABLE_VFS_DEBUG_ACL)
+    set(fsalvfs_LIB_SRCS_common
+        ${fsalvfs_LIB_SRCS_common}
+        attrs.c
+    )
+endif(ENABLE_VFS_DEBUG_ACL)
+
+if(USE_FSAL_VFS)
+
+    set(FSAL_LUSTRE_VFS_NAME "VFS")
+    configure_file(main-c.in.cmake main.c)
+    set(fsalvfs_LIB_SRCS
+        ${fsalvfs_LIB_SRCS_common}
+        ../empty_check_hsm.c
+        main.c
+    )
+
+    add_library(fsalvfs MODULE ${fsalvfs_LIB_SRCS})
+    add_sanitizers(fsalvfs)
+    set(fsalvfs_TGT_LINK_LIB
+      gos
+      fsal_os
+      ${SYSTEM_LIBRARIES}
+    )
+
+    target_link_libraries(fsalvfs ${fsalvfs_TGT_LINK_LIB})
+    set_target_properties(fsalvfs PROPERTIES VERSION 4.2.0 SOVERSION 4)
+    install(TARGETS fsalvfs COMPONENT fsal DESTINATION ${FSAL_DESTINATION} )
+endif(USE_FSAL_VFS)
+
+#FSAL_LUSTRE OVER FSAL_VFS
+if(USE_FSAL_LUSTRE)
+    if(USE_LLAPI)
+    #TRUE FSAL_LUSTRE
+        set(FSAL_LUSTRE_VFS_NAME "LUSTRE")
+        configure_file(main-c.in.cmake lustre_main.c)
+        set(fsallustre_LIB_SRCS
+            ${fsalvfs_LIB_SRCS_common}
+            lustre_main.c
+            llapi_check_hsm.c
+        )
+
+        add_library(fsallustre MODULE ${fsallustre_LIB_SRCS})
+        add_sanitizers(fsallustre)
+        target_link_libraries(fsallustre
+            ${fsalvfs_TGT_LINK_LIB}
+            lustreapi
+        )
+
+        set_target_properties(fsallustre PROPERTIES
+            VERSION 4.2.0
+            SOVERSION 4
+        )
+
+        install(TARGETS fsallustre
+            COMPONENT fsal
+            DESTINATION ${FSAL_DESTINATION}
+        )
+
+    else(USE_LLAPI)
+    #FSAL_DUMMYLUSTRE
+    #Even if we lack a good version of lustreapi, we continue to build and link
+    # a dummy FSAL_LUSTRE to test the build path.
+        set(FSAL_LUSTRE_VFS_NAME "DUMMYLUSTRE")
+        configure_file(main-c.in.cmake dummy_lustre_main.c)
+        set(fsallustre_LIB_SRCS
+            ${fsalvfs_LIB_SRCS_common}
+            dummy_lustre_main.c
+            llapi_check_hsm.c
+        )
+
+        add_library(fsaldummylustre MODULE ${fsallustre_LIB_SRCS})
+        add_sanitizers(fsaldummylustre)
+        target_link_libraries(fsaldummylustre
+            ${fsalvfs_TGT_LINK_LIB}
+        )
+
+        set_target_properties(fsaldummylustre PROPERTIES
+            VERSION 4.2.0
+            SOVERSION 4
+        )
+
+        install(TARGETS fsaldummylustre
+            COMPONENT fsal
+            DESTINATION ${FSAL_DESTINATION}
+        )
+
+    endif(USE_LLAPI)
+endif(USE_FSAL_LUSTRE)
