Create the LUSTRE FSAL over VFS FSAL
This initial Lustre FSAL code is as nearest as possible from the
VFS FSAL code.

It only adds a HSM (Hierchical Storage Manager with several
storage levels) check to trigger a restore and return
ERR_FSAL_DELAY at open when a file is released.

An option of export is added to set/unset this behaviour :
async_hsm_restore. For example, 9P clients don't support retry.

If we don't have an up to date lustre api, we still compile a
"dummy" LUSTRE FSAL to continue to check the compilation path.

Change-Id: Ibe495fd0467ab6b86c1eb369099a78fc048d55a0
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/doc/man/CMakeLists.txt
+++ b/src/doc/man/CMakeLists.txt
@@ -37,6 +37,11 @@ if(USE_FSAL_VFS)
         ganesha-vfs-config.rst)
 endif()
 
+if(USE_FSAL_LUSTRE)
+   list(APPEND man_srcs
+        ganesha-lustre-config.rst)
+endif()
+
 if(USE_FSAL_PROXY)
    list(APPEND man_srcs
         ganesha-proxy-config.rst)
