gtest/test_link_latency: link latency microbenchmark
gtest unit test that run link on single case, large loops
and bypass cases to find average latency of the calls.

Change-Id: Ie49bbf29e53a00a08dd2f03730988d22a3a29f9a
Signed-off-by: Girjesh Rajoria <grajoria@redhat.com>

--- a/src/gtest/CMakeLists.txt
+++ b/src/gtest/CMakeLists.txt
@@ -112,3 +112,18 @@ target_link_libraries(test_symlink_latency
   )
 set_target_properties(test_symlink_latency PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
+
+
+set(test_link_latency_SRCS
+  test_link_latency.cc
+  )
+
+add_executable(test_link_latency
+  ${test_link_latency_SRCS})
+add_sanitizers(test_link_latency)
+
+target_link_libraries(test_link_latency
+  ${GTEST_LIBRARIES}
+  )
+set_target_properties(test_link_latency PROPERTIES COMPILE_FLAGS
+  "${UNITTEST_CXX_FLAGS}")
