RADOS_URLS: enable them by default
We'll already enable RADOS_KV recovery backends by default, so we might
as well turn this on too.

Change-Id: Iebda3ea3a5a80e2bbb6191172ef42f1c15e929f1
Signed-off-by: Jeff Layton <jlayton@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -374,7 +374,7 @@ option(USE_MAN_PAGE "Build MAN page" OFF)
 option(USE_RADOS_RECOV "Enable Rados KV Recovery" ON)
 
 # Enable RADOS URL config file sections
-option(RADOS_URLS "Enable config file inclusion from RADOS objects" OFF)
+option(RADOS_URLS "Enable config file inclusion from RADOS objects" ON)
 
 #
 # End build options
