tools: add new rados_grace manipulation tool
Add a new command-line tool for manipulating and querying the rados_grace
database. It will dump out the state of the epochs and then a list of
omap keys and their flags.

Change-Id: If57591265ce736cdcebab749651d5ab6982341d8
Signed-off-by: Jeff Layton <jlayton@redhat.com>

--- a/src/doc/man/CMakeLists.txt
+++ b/src/doc/man/CMakeLists.txt
@@ -52,6 +52,11 @@ if(USE_FSAL_GPFS)
         ganesha-gpfs-config.rst)
 endif()
 
+if(USE_RADOS_RECOV)
+	list(APPEND man_srcs
+	     rados_grace_tool.rst)
+endif()
+
 foreach(man ${man_srcs})
   list(APPEND sphinx_input ${CMAKE_CURRENT_SOURCE_DIR}/${man})
   string(REGEX REPLACE ".rst$" "" cmd ${man})
