spec: allow packagers to remove dependency on rpcbind
Allow package builders to fully disable rpcbind support. This allows us
to avoid pulling in rpcbind as a dependency. While we're in there, fix
a couple of warnings that show up due to macro expansion in comments.

Change-Id: I79b8285ce771cbff571b94fbee9f1471ff07f386
Signed-off-by: Jeff Layton <jlayton@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1372,6 +1372,12 @@ else(RADOS_URLS)
     set(BCOND_RADOS_URLS "%bcond_with")
 endif(RADOS_URLS)
 
+if(PORTMAPPER)
+    set(BCOND_PORTMAPPER "%bcond_without")
+else(PORTMAPPER)
+    set(BCOND_PORTMAPPER "%bcond_with")
+endif(PORTMAPPER)
+
 # Now create a useable specfile
 configure_file(
   "${PROJECT_SOURCE_DIR}/nfs-ganesha.spec-in.cmake"
