gtest/test_unlink_latency: unlink latency microbenchmark
gtest unit test that run unlink on single case, large loops
and bypass cases to find average latency of the calls.

Change-Id: I3f08ee940bb4b1cdb441977453d2fc09fa00d7d7
Signed-off-by: Girjesh Rajoria <grajoria@redhat.com>

--- a/src/gtest/CMakeLists.txt
+++ b/src/gtest/CMakeLists.txt
@@ -127,3 +127,18 @@ target_link_libraries(test_link_latency
   )
 set_target_properties(test_link_latency PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
+
+
+set(test_unlink_latency_SRCS
+  test_unlink_latency.cc
+  )
+
+add_executable(test_unlink_latency
+  ${test_unlink_latency_SRCS})
+add_sanitizers(test_unlink_latency)
+
+target_link_libraries(test_unlink_latency
+  ${GTEST_LIBRARIES}
+  )
+set_target_properties(test_unlink_latency PROPERTIES COMPILE_FLAGS
+  "${UNITTEST_CXX_FLAGS}")
