--- a/src/FSAL/CMakeLists.txt
+++ b/src/FSAL/CMakeLists.txt
@@ -31,6 +31,10 @@ if(USE_FSAL_GLUSTER)
   add_subdirectory(FSAL_GLUSTER)
 endif(USE_FSAL_GLUSTER)
 
+if(USE_FSAL_LIZARDFS)
+  add_subdirectory(FSAL_LIZARDFS)
+endif(USE_FSAL_LIZARDFS)
+
 if(USE_FSAL_MEM)
   add_subdirectory(FSAL_MEM)
 endif(USE_FSAL_MEM)
