MainNFSD: invert _NO_PORTMAPPER option and rename to RPCBIND
The fact that this is a "negative" option is confusing. Change it
to a "RPCBIND" option, and have it default to ON.

Change-Id: If789273d5310addca7bfa125bcf0e789df161964
Signed-off-by: Jeff Layton <jlayton@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -242,7 +242,7 @@ option(USE_EFENCE "link with efence memory debug library" OFF)
 
 # These are -D_FOO options, why ???  should be flags??
 option(_NO_TCP_REGISTER "disable registration of tcp services on portmapper" OFF)
-option(_NO_PORTMAPPER "disable registration on portmapper" OFF)
+option(RPCBIND "enable registration with rpcbind" ON)
 option(_NO_XATTRD "disable ghost xattr directory and files support" ON)
 option(DEBUG_SAL "enable debugging of SAL by keeping list of all locks, stateids, and state owners" OFF)
 option(_VALGRIND_MEMCHECK "Initialize buffers passed to GPFS ioctl that valgrind doesn't understand" OFF)
@@ -1048,7 +1048,7 @@ message(STATUS "DISTNAME_HAS_GIT_DATA = ${DISTNAME_HAS_GIT_DATA}" )
 message(STATUS "_MSPAC_SUPPORT = ${_MSPAC_SUPPORT}")
 message(STATUS "USE_EFENCE = ${USE_EFENCE}")
 message(STATUS "_NO_TCP_REGISTER = ${_NO_TCP_REGISTER}")
-message(STATUS "_NO_PORTMAPPER = ${_NO_PORTMAPPER}")
+message(STATUS "RPCBIND = ${RPCBIND}")
 message(STATUS "_NO_XATTRD = ${_NO_XATTRD}")
 message(STATUS "DEBUG_SAL = ${DEBUG_SAL}")
 message(STATUS "_VALGRIND_MEMCHECK = ${_VALGRIND_MEMCHECK}")
