gtest, dupreq:  profile and test DRC
Single- and multi-threaded correctness and profiling support
e.g., DRC request/retire rates wth NFSv3/4.0 TCP DRC.

Contains the following profile-guided rework:

0. testing w/1-entry cache--0 would be optimal, will send later
1. simplify locking patterns, lift lanes into drc_t
2. introduce per-DRC free lists (remove most allocations)
3. s/mutex/spinlock/
4. lower refcnt into lanes, move cost into teardown
5. added benchmarking defines (price out dv->sp, all rbt ops)

Incorporates uniform release of transport DRC ref separately fixed by
Satya G S <g.satyaprakash@gmail.com>.

On 32-core E5-2630, observed >2.5M DRC retires/s w/2 threads (4.5M w/1 thread)

examples:

sudo chrt -rr 1 perf record -g --call-graph dwarf ./gtest/test_drc --nlanes=117 --nthreads=2 --dhiwat=32

sudo chrt -rr 1 perf record -g --call-graph dwarf ./gtest/test_drc --nlanes=117 --nthreads=19 --dhiwat=32 --per_thread_xprt

Observations:
1. cost of rbt operations at n <= 128 less than 20% of runtime, worst case
2. cost of per-req spinlock negligible
3. contention for lane->sp dominates retire rate
3.3 scalability +varies geometrically w/nlanes, -varies faster w/nthreads
4. nlanes scale curve falls off above nlanes=117 (flat at 743)

Change-Id: I567ef2967cb867938365de341e14934f35cc5682
Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>

--- a/src/gtest/CMakeLists.txt
+++ b/src/gtest/CMakeLists.txt
@@ -24,7 +24,7 @@ set(GTEST_LIBRARIES
   ${UNITTEST_LIBS}
   ${LTTNG_LIBRARIES}
   ${LTTNG_CTL_LIBRARIES}
-  )
+)
 
 # generic test
 set(test_example_SRCS
@@ -174,6 +174,7 @@ add_sanitizers(test_rbt)
 
 target_link_libraries(test_rbt
   ${GTEST_LIBRARIES}
+  ${GPERFTOOLS_LIBRARIES}
   )
 set_target_properties(test_rbt PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
@@ -192,7 +193,6 @@ target_link_libraries(test_getattrs_latency
 set_target_properties(test_getattrs_latency PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
 
-
 set(test_close_latency_SRCS
   test_close_latency.cc
   )
@@ -206,3 +206,20 @@ target_link_libraries(test_close_latency
   )
 set_target_properties(test_close_latency PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
+
+set(test_drc_SRCS
+  test_drc.cc
+  )
+
+add_executable(test_drc
+  ${test_drc_SRCS})
+add_sanitizers(test_drc)
+
+target_link_libraries(test_drc
+  ${GTEST_LIBRARIES}
+  ${GPERFTOOLS_LIBRARIES}
+  )
+
+set_target_properties(test_drc PROPERTIES COMPILE_FLAGS
+  "${UNITTEST_CXX_FLAGS}"
+  )
