cmake/efence: fix USE_EFENCE
find_package no longer works for some reason, switching to
find_library is simpler and just as good for our purpose

Note that ganesha relies on malloc(0) to work, so efence users need to
set EF_ALLOW_MALLOC_0=1 before running ganesha.

Change-Id: I9b072455669b05e2896c3d5a3db40638860ab834
Signed-off-by: Dominique Martinet <dominique.martinet@cea.fr>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -712,8 +712,8 @@ if (USE_ACL_MAPPING)
 endif(USE_ACL_MAPPING)
 
 if(USE_EFENCE)
-  find_package(efence REQUIRED)
-  set(SYSTEM_LIBRARIES ${efence_LIBRARIES} ${SYSTEM_LIBRARIES})
+  find_library(LIBEFENCE efence REQUIRED)
+  set(SYSTEM_LIBRARIES ${LIBEFENCE} ${SYSTEM_LIBRARIES})
 endif(USE_EFENCE)
 
 if(USE_DBUS)
