Fixes to allow VFS subfsals to control referrals
Added fs_locations into attrlist. fs locations are ref counted and have
a new trust flag (MDCACHE_TRUST_FS_LOCATIONS). fs locations are not
populated as part of getattrs implementation. This is delegated to
subfsal through subfsal getattrs implementation. Added a separate file
(subfsal_helpers.c), which implements the current fs locations logic,
this can be used by subfsals if required or can write its own.

Removed fs_locations FSAL API. Now that the fs_locations are in
attrlist, the API is not longer required. This changes the
imeplementation of encode_fs_locations.

Change FSAL_GPFS to use new FSAL API is_referral and removed
fs_locations implementation.

Note: This fix does not cache negative results for fs locations in
mdcache

Testing: pynfs (all and fslocations), cthon on vfs mounts

Change-Id: I2df580ee3d3a2c436b567a1ea1d5dbe3d408889d
Signed-off-by: Sriram Patil <sriramp@vmware.com>

--- a/src/FSAL/FSAL_VFS/vfs/CMakeLists.txt
+++ b/src/FSAL/FSAL_VFS/vfs/CMakeLists.txt
@@ -11,15 +11,10 @@ SET(fsalvfs_LIB_SRCS_common
    ../xattrs.c
    ../vfs_methods.h
    ../state.c
+   ../subfsal_helpers.c
    subfsal_vfs.c
+   attrs.c
 )
-
-if(ENABLE_VFS_DEBUG_ACL)
-    set(fsalvfs_LIB_SRCS_common
-        ${fsalvfs_LIB_SRCS_common}
-        attrs.c
-    )
-endif(ENABLE_VFS_DEBUG_ACL)
 
 if(USE_FSAL_VFS)
 
