cmake: fix library link in config_parsing library setup
This fixes this warning from cmake:

CMake Warning (dev) at config_parsing/CMakeLists.txt:43 (target_link_libraries):
  Cannot specify link libraries for target "/usr/lib64/librados.so" which is
  not built by this project.

  CMake does not support this but it used to work accidentally and is being
  allowed for compatibility.

  Policy CMP0016 is not set: target_link_libraries() reports error if its
  only argument is not a target.  Run "cmake --help-policy CMP0016" for
  policy details.  Use the cmake_policy command to set the policy and
  suppress this warning.
This warning is for project developers.  Use -Wno-dev to suppress it.

Ensure we're linking the libraries to the right target.

Change-Id: I6d3218b227fe0bdcce99fa10983a00f8210e3ac9
Signed-off-by: Jeff Layton <jlayton@redhat.com>

--- a/src/config_parsing/CMakeLists.txt
+++ b/src/config_parsing/CMakeLists.txt
@@ -38,9 +38,6 @@ if(RADOS_URLS)
     ${config_parsing_STAT_SRCS}
     conf_url_rados.c
     )
-
-  include_directories(${RADOS_INCLUDE_DIR})
-  target_link_libraries(${RADOS_LIBRARIES})
 endif(RADOS_URLS)
 
 add_library(config_parsing STATIC
@@ -48,6 +45,12 @@ add_library(config_parsing STATIC
   ${BISON_ConfigParser_OUTPUTS}
   ${FLEX_ConfigScanner_OUTPUTS}
 )
+
+if(RADOS_URLS)
+  include_directories(config_parsing ${RADOS_INCLUDE_DIR})
+  target_link_libraries(config_parsing ${RADOS_LIBRARIES})
+endif(RADOS_URLS)
+
 add_sanitizers(config_parsing)
 
 ########### next target ###############
