Change mailing list
Signed-off-by: Frank S. Filz <ffilzlnx@mindspring.com>

--- a/project.config
+++ b/project.config
@@ -26,7 +26,7 @@
 	pushTag = group user/Frank Filz (ffilz)
 	pushSignedTag = group user/Frank Filz (ffilz)
 [notify "list"]
-	email = nfs-ganesha-devel@lists.sourceforge.net
+	email = devel@lists.nfs-ganesha.org
 	type = new_changes
 [receive]
 	requireSignedOffBy = true
