gtest/test_write2_latency: write2 latency microbenchmark
gtest unit test that run write2 on single case, large loops,
bypass cases, cases covering stable and unstable write of
small and large amount to a file to find average latency of
the calls.

Change-Id: I2966731538b1ed67a322e970a580079caf1e1468
Signed-off-by: Girjesh Rajoria <grajoria@redhat.com>

--- a/src/gtest/CMakeLists.txt
+++ b/src/gtest/CMakeLists.txt
@@ -261,3 +261,22 @@ target_link_libraries(test_commit2_latency
   )
 set_target_properties(test_commit2_latency PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
+
+
+set(test_write2_latency_SRCS
+  test_write2_latency.cc
+  )
+
+add_executable(test_write2_latency
+  ${test_write2_latency_SRCS})
+add_sanitizers(test_write2_latency)
+
+target_link_libraries(test_write2_latency
+  ${GANESHA_LIBRARIES}
+  ${UNITTEST_LIBS}
+  ${LTTNG_LIBRARIES}
+  ${LTTNG_CTL_LIBRARIES}
+  ${GPERFTOOLS_LIBRARIES}
+  )
+set_target_properties(test_write2_latency PROPERTIES COMPILE_FLAGS
+  "${UNITTEST_CXX_FLAGS}")
