--- a/project.config
+++ b/project.config
@@ -26,9 +26,14 @@
 	pushTag = group user/Frank Filz (ffilz)
 	pushSignedTag = group user/Frank Filz (ffilz)
 [notify "list"]
-	email = nfs-ganesha-devel@lists.sourceforge.net
 	email = devel@lists.nfs-ganesha.org
 	type = new_changes
+[notify "old"]
+	email = nfs-ganesha-devel@lists.sourceforge.net
+	type = new_changes
+[notify "temp"]
+	email = devel@lists.nfs-ganesha.org
+	type = all
 [receive]
 	requireSignedOffBy = true
 	requireChangeId = true
